Issue: #FT-3603 Component: Changes: 1.Fix: resize-handler z-index is higher than map tool background in details view.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/page.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/page.less
@@ -53,7 +53,7 @@ body {
 			height: 100%;
 			background-color: #4b4b4b;
 			cursor: ew-resize;
-			z-index: 1040;
+			z-index: 105;
 
 			.sliderbar-button {
 				position: absolute;
